--- a/iOS/ExtSafariCatalog/ExtSafariCatalog/ExtSafariCatalog-Info.plist
+++ b/iOS/ExtSafariCatalog/ExtSafariCatalog/ExtSafariCatalog-Info.plist
@@ -8,6 +8,33 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>58</string>
+				<string>80</string>
+				<string>120</string>
+			</array>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>150</string>
+				<string>58</string>
+				<string>80</string>
+				<string>29</string>
+				<string>40</string>
+				<string>76</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>careward.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
